--- a/src/Components/Calculator/Calculator.css
+++ b/src/Components/Calculator/Calculator.css
@@ -22,6 +22,7 @@
     background-color: #000000;
     max-width: 100px;
     color: #fff;
+    font-weight: 900;
 }
 
 .bg-red {
@@ -39,6 +40,10 @@
 
 .row {
     margin: 10px 0;
+}
+
+.clear{
+    padding: 20px 40px;
 }
 
 .equal {
