--- a/src/Components/Calculator/Calculator.css
+++ b/src/Components/Calculator/Calculator.css
@@ -6,7 +6,7 @@
 
 .container {
     margin: 50px auto;
-    max-width: 45vh;
+    max-width: 55vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,6 +14,8 @@
 }
 
 .input {
+    width: 400px;
+    height: 100px;
     padding: 8px 30px;
     border-radius: 10px;
     border: 0;
@@ -30,7 +32,7 @@
 }
 
 .button {
-    padding: 20px;
+    padding: 20px 30px;
     margin: 0 5px;
     background-color:#313131;
     border-radius: 10px;
@@ -43,7 +45,7 @@
 }
 
 .clear{
-    padding: 20px 40px;
+    padding: 20px 58px;
 }
 
 .equal {
@@ -51,7 +53,7 @@
 }
 
 .zero {
-    padding: 20px 50px;
+    padding: 20px 70px;
 }
 
 .bt-orenge{
